refs #104787: adjusting fixed nav padding on mobile (static pages).

--- a/drupal/sites/all/themes/leidos/css/main.css
+++ b/drupal/sites/all/themes/leidos/css/main.css
@@ -8814,23 +8814,28 @@ p.subtext {
   clear: both;
 }
 @media only screen and (max-width: 960px) {
-  /* line 52, sass/partials/modules/_static-fixed-nav.scss */
-  .staticContent .fixedNav a {
-    font-size: 16px;
+  /* line 53, sass/partials/modules/_static-fixed-nav.scss */
+  .staticContent .fixedNav li + li {
+    margin-left: 1.2em;
   }
   /* line 57, sass/partials/modules/_static-fixed-nav.scss */
+  .staticContent .fixedNav a {
+    font-size: 16px;
+    padding: 1.25em 0;
+  }
+  /* line 63, sass/partials/modules/_static-fixed-nav.scss */
   .staticContent .sticky-wrapper {
     margin-bottom: 100px;
   }
 }
 @media only screen and (max-width: 720px) {
-  /* line 65, sass/partials/modules/_static-fixed-nav.scss */
+  /* line 71, sass/partials/modules/_static-fixed-nav.scss */
   .staticContent .fixedNav {
     position: relative !important;
   }
 }
 @media only screen and (max-height: 350px) {
-  /* line 70, sass/partials/modules/_static-fixed-nav.scss */
+  /* line 76, sass/partials/modules/_static-fixed-nav.scss */
   .staticContent .fixedNav {
     position: relative !important;
   }
