--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-fixed-nav.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-fixed-nav.scss
@@ -49,8 +49,14 @@
     **************************************************/
     @media only screen and (max-width: 960px) {
         .fixedNav {
+            li {
+                + li {
+                    margin-left: 1.2em;
+                }
+            }
             a {
                 font-size: 16px;
+                padding: 1.25em 0;
             }
         }
 
